--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,26 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="item" id="qa-block">
-      <div class="item__middle">
-        <div class="item__inner">
-          In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.
+    <div class="block">
+      <div class="item outer" id="qa-block">
+        <div class="item middle">
+          <div class="item inner">
+            In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.
+          </div>
         </div>
       </div>
-    </div>
-    <div class="item">
-      <div class="item__middle">
-        <div class="item__inner">
-          У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.
+      <div class="item outer">
+        <div class="item middle">
+          <div class="item inner">
+            У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.
+          </div>
         </div>
       </div>
-    </div>
-    <div class="item">
-      <div class="item__middle">
-        <div class="item__inner">
-          Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.
+      <div class="item outer">
+        <div class="item middle">
+          <div class="item inner">
+            Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.
+          </div>
         </div>
       </div>
     </div>
